# Simplified-Paint

./: CMakeLists.txt  LICENSE  README.md  build.sh
resource/: Menu.txt  resource.rc
src/: BasePaintTool.cpp  BasePaintTool.h  Canvas.cpp  Canvas.h  ColourRect.cpp  ColourRect.h  Figures.cpp  Figures.h  FileManager.cpp  FileManager.h  Icon.cpp  Icon.h  Interface.cpp  Interface.h  InterfaceEnumerations.h  Paint.cpp  Paint.h  ToolParameters.h  Tools.cpp  Tools.h  Zoom.cpp  Zoom.h  main.cpp
src/MenuSystem/: Constants.h  ErrorState.h  IButton.h  Library.cpp  Library.h  MainButton.cpp  MainButton.h  MainMenu.cpp  MainMenu.h  Parser.cpp  Parser.h  PopupButton.cpp  PopupButton.h  PopupButtonParameters.h  PopupMenu.cpp  PopupMenu.h  TextureParameters.h
